--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "js-blake2s",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Pure JavaScript BLAKE2s cryptographic hash function",
-  "main": "lib/jsblake2s.min.js",
+  "main": "lib/jsblake2s.js",
   "directories": {
     "test": "test",
     "src": "src",
@@ -17,15 +17,20 @@
     "babili": "^0.0.10",
     "cross-env": "^3.1.4",
     "eslint": "^3.13.1",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "standard": "^8.6.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3",
     "tape-watch": "^2.2.4"
   },
   "scripts": {
     "prod": "npm run build && cross-env BABEL_ENV=production babel ./src/jsblake2s.js --out-file ./lib/jsblake2s.min.js",
-    "build": "babel ./src/jsblake2s.js --out-file ./lib/jsblake2s.js --source-maps inline",
+    "build": "babel ./src/jsblake2s.js --out-file ./lib/jsblake2s.js",
     "test": "tape -r babel-register test/**/*.test.js | tap-spec",
-    "watch": "tape-watch test/**/*.test.js -r babel-register -p tap-spec"
+    "watch": "tape-watch test/**/*.test.js -r babel-register -p tap-spec",
+    "lint": "standard ./src/jsblake2s.js ./test/**/*.js"
   },
   "repository": {
     "type": "git",
