--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "js-blake2s",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Pure JavaScript BLAKE2s cryptographic hash function",
-  "main": "lib/jsblake2s.js",
+  "main": "src/jsblake2s.js",
   "directories": {
     "test": "test",
     "src": "src",
